# valentine

./: .gitignore  LICENSE  README.md  codecov.yml  pyproject.toml  requirements.txt  zensical.toml
.github/workflows/: build.yml  ci-build-test-publish.yml  docs.yml
docs/: api.md  changelog.md  example.md  faq.md  getting-started.md  index.md  matchers.md  metrics.md  research.md  results.md
docs/assets/: extra.css
examples/: tcc_gdc.py  tcc_tests.py  valentine_example.py  valentine_example_goodness_of_fitness.py
examples/data/: abalone1.csv  abalone2.csv  source_candidates.csv  target_candidates.csv
overrides/: 404.html  main.html
tests/: __init__.py  test_algorithms.py  test_coma_py_regression.py  test_coma_py_units.py  test_coma_regression.py  test_coma_units.py  test_coverage_gaps.py  test_cupid_algo.py  test_data_sources.py  test_distribution_based_benchmark.py  test_docs_smoke.py  test_matcher_results.py  test_metrics.py  test_sf_algo.py  test_utils.py  test_valentine.py
valentine/: __init__.py
valentine/algorithms/: __init__.py  base_matcher.py  match.py  matcher_results.py
valentine/algorithms/coma/: __init__.py  coma.py  matchers.py  schema.py  selection.py
valentine/algorithms/coma/similarity/: trigram.py
valentine/algorithms/coma_py/: __init__.py  coma_py.py  combination.py  schema.py
valentine/algorithms/coma_py/similarity/: datatype.py  tfidf.py
valentine/algorithms/cupid/: __init__.py  cupid_model.py  linguistic_matching.py  schema_element.py  schema_element_node.py  schema_tree.py  structural_similarity.py  tree_match.py
valentine/algorithms/distribution_based/: bloom_filter.py  clustering_utils.py  column_model.py  discovery.py  distribution_based.py  emd_utils.py  quantile_histogram.py
valentine/algorithms/goodness_of_fitness/: gof_methods.py  goodness_of_fit.py
valentine/algorithms/jaccard_distance/: jaccard_distance.py
valentine/algorithms/similarity_flooding/: __init__.py  graph.py  node.py  node_pair.py  propagation_graph.py  similarity_flooding.py  string_matcher.py
valentine/data_sources/: __init__.py  base_table.py  utils.py
valentine/data_sources/dataframe/: dataframe_column.py  dataframe_table.py
valentine/metrics/: __init__.py  base_metric.py  metric_helpers.py  metrics.py
valentine/utils/: utils.py
