[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "valentine"
version = "0.4.1"
description = "Valentine Matcher"
readme = "README.md"
authors = [
    { name = "Delft Data", email = "delftdatasystems@gmail.com" }
]
maintainers = [
    { name = "Delft Data", email = "delftdatasystems@gmail.com" }
]
license = { file = "LICENSE" }
keywords = ["matching", "valentine", "schema matching", "dataset discovery", "coma", "cupid", "similarity flooding"]

classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]

requires-python = ">=3.10,<3.15"
dependencies = [
    "numpy>=2.0,<3.0",
    "pandas>=2.0,<4.0",
    "nltk>=3.9.4,<4.0",
    "anytree>=2.9,<3.0",
    "networkx>=2.8,<4.0",
    "chardet>=7.0,<8.0",
    "jellyfish>=0.9,<1.3",
    "PuLP>=2.5,<4.0",
    "POT>=0.9.5,<1.0",
    "python-dateutil>=2.8,<3.0"
]

[project.urls]
Homepage = "https://delftdata.github.io/valentine/"
Documentation = "https://delftdata.github.io/valentine/"
Source = "https://github.com/delftdata/valentine"
Issues = "https://github.com/delftdata/valentine/issues"

[tool.setuptools]
packages = { find = { include = ["valentine*"], exclude = ["tests*", "examples*"] } }
include-package-data = true
license-files = ["LICENSE"]

# include the JAR and license files in the wheel
[tool.setuptools.package-data]
"valentine.algorithms.coma" = [
  "artifact/coma.jar",
  "licenses/*",
]

[tool.ruff]
target-version = "py314"
line-length = 100
indent-width = 4

exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "__pycache__",
    "docs",
]

[tool.ruff.lint]
select = [
    # Core
    "E", "W", "F",

    # Imports
    "I",

    # Bug detection
    "B",        # bugbear
    "RUF",      # Ruff-native

    # Code quality
    "C4",       # comprehensions
    "SIM",      # simplifications
    "RET",      # returns
    "ARG",      # unused args

    # Modern Python
    "UP",

    # Pathlib over os
    "PTH",

    # Pylint-like (strictness boost)
    "PL",

    # Exception handling
    "TRY",

    # Performance
    "PERF",

    #Numpy
    "NPY",

    # dateutil
    "DTZ",
]


ignore = [
    # Style tradeoffs
    "E501",    # line length handled by formatter
    "SIM108",  # ternary suggestions can hurt readability

    # Practicality for algorithms / research code
    "PLR0913", # too many arguments (common in matching algorithms)
    "PLR2004", # magic values (similarity thresholds, etc.)
    "PLR0915", # too many statements (complex pipelines)

    # Readability tradeoffs
    "RET504",  # unnecessary assignment before return
    "RET505",  # else-after-return (sometimes clearer)

    # Allow flexible exception patterns
    "TRY003",  # long exception messages
]

dummy-variable-rgx = "^_.*"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ARG",      # unused fixtures
    "S101",     # asserts
    "PLR2004",  # magic values
    "PLR0913",  # many args
]

"__init__.py" = [
    "F401",     # re-exports
]

[tool.ruff.lint.isort]
known-first-party = ["valentine"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true